<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/orderAll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectOrderCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/table_layout_border_style" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/marketName"
                    android:textColor="@color/gray"
                    android:background="@drawable/table_layout_border_style" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/watchPrice"
                    android:textColor="@color/gray"
                    android:background="@drawable/table_layout_border_style" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/orderQuantity"
                    android:textColor="@color/gray"
                    android:background="@drawable/table_layout_border_style" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/tradeType"
                    android:textColor="@color/gray"
                    android:background="@drawable/table_layout_border_style" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/orderPrice"
                    android:textColor="@color/gray"
                    android:background="@drawable/table_layout_border_style" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/unexecutedQuantity"
                    android:textColor="@color/gray"
                    android:background="@drawable/table_layout_border_style" />

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/orderTime"
            android:textColor="@color/gray"
            android:background="@drawable/table_layout_border_style" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/fragment_investment_detail_unexecuted_list"/>


</LinearLayout>